Add lint check for bazel (buildifier)
This fix adds lint check for bazel buildifier

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
   - stage: lint
     name: "Lint"
     script:
+    - bash -x -e .travis/lint.bazel.sh
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/lint.python.sh
   # Install Builds make sure the release of the repo could be
   # install and run on commodity user environment (Ubuntu 16.04/18.04).
