--- a/tensorflow_io/kinesis/BUILD
+++ b/tensorflow_io/kinesis/BUILD
@@ -3,17 +3,22 @@ licenses(["notice"])  # Apache 2.0
 package(default_visibility = ["//visibility:public"])
 
 cc_binary(
-    name = 'python/ops/_kinesis_ops.so',
+    name = "python/ops/_kinesis_ops.so",
     srcs = [
         "kernels/kinesis_dataset_ops.cc",
         "ops/dataset_ops.cc",
     ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
+    ],
     linkshared = 1,
     deps = [
+        "@aws",
+        "@curl",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
-        "@curl//:curl",
-        "@aws//:aws",
     ],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
