--- a/tensorflow_io/libsvm/BUILD
+++ b/tensorflow_io/libsvm/BUILD
@@ -8,10 +8,15 @@ cc_binary(
         "kernels/decode_libsvm_op.cc",
         "ops/libsvm_ops.cc",
     ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
+    ],
     linkshared = 1,
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
