--- a/tensorflow_io/pubsub/BUILD
+++ b/tensorflow_io/pubsub/BUILD
@@ -5,17 +5,22 @@ package(default_visibility = ["//visibility:public"])
 load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
 
 cc_binary(
-    name = 'python/ops/_pubsub_ops.so',
+    name = "python/ops/_pubsub_ops.so",
     srcs = [
         "kernels/pubsub_dataset_ops.cc",
         "ops/dataset_ops.cc",
     ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
+    ],
     linkshared = 1,
     deps = [
+        "@com_github_grpc_grpc//:grpc++",
+        "@com_google_googleapis//google/pubsub/v1:pubsub_proto",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
-	"@com_google_googleapis//google/pubsub/v1:pubsub_proto",
-        "@com_github_grpc_grpc//:grpc++",
     ],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
