--- a/tensorflow_io/video/BUILD
+++ b/tensorflow_io/video/BUILD
@@ -3,61 +3,76 @@ licenses(["notice"])  # Apache 2.0
 package(default_visibility = ["//visibility:public"])
 
 cc_binary(
-    name = 'python/ops/_video_ops_ffmpeg_3.4.so',
+    name = "python/ops/_video_ops_ffmpeg_3.4.so",
     srcs = [
         "kernels/ffmpeg_3_4.cc",
-        "kernels/video_reader.h",
         "kernels/video_dataset_ops.cc",
+        "kernels/video_reader.h",
         "ops/dataset_ops.cc",
     ],
-    includes = ["."],
-    linkshared = 1,
-    linkopts = [],
-    deps = [
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
-	"@ffmpeg_3_4//:ffmpeg",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
     ],
     data = [],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
+    includes = ["."],
+    linkopts = [],
+    linkshared = 1,
+    deps = [
+        "@ffmpeg_3_4//:ffmpeg",
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
 )
 
 cc_binary(
-    name = 'python/ops/_video_ops_ffmpeg_2.8.so',
+    name = "python/ops/_video_ops_ffmpeg_2.8.so",
     srcs = [
         "kernels/ffmpeg_2_8.cc",
-        "kernels/video_reader.h",
         "kernels/video_dataset_ops.cc",
+        "kernels/video_reader.h",
         "ops/dataset_ops.cc",
     ],
-    includes = ["."],
-    linkshared = 1,
-    linkopts = [],
-    deps = [
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
-	"@ffmpeg_2_8//:ffmpeg",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
     ],
     data = [],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
+    includes = ["."],
+    linkopts = [],
+    linkshared = 1,
+    deps = [
+        "@ffmpeg_2_8//:ffmpeg",
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
 )
 
 cc_binary(
-    name = 'python/ops/_video_ops_libav_9.20.so',
+    name = "python/ops/_video_ops_libav_9.20.so",
     srcs = [
         "kernels/libav_9_20.cc",
-        "kernels/video_reader.h",
         "kernels/video_dataset_ops.cc",
+        "kernels/video_reader.h",
         "ops/dataset_ops.cc",
     ],
-    includes = ["."],
-    linkshared = 1,
-    linkopts = [],
-    deps = [
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
-	"@libav_9_20//:libav",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
     ],
     data = [],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
+    includes = ["."],
+    linkopts = [],
+    linkshared = 1,
+    deps = [
+        "@libav_9_20//:libav",
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
 )
