Add Kafka Output support
This is a follow up PR of Text Output support to add
Kafka Output.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -2,11 +2,10 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
-cc_binary(
-    name = "python/ops/_text_ops.so",
+cc_library(
+    name = "sequence_ops",
     srcs = [
-        "kernels/text_sequence.cc",
-        "ops/text_ops.cc",
+        "kernels/sequence_ops.h",
     ],
     copts = [
         "-pthread",
@@ -17,9 +16,7 @@ cc_binary(
     includes = [
         ".",
     ],
-    linkshared = 1,
     deps = [
-        "//tensorflow_io/core:sequence_ops",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
