--- a/tensorflow_io/kafka/BUILD
+++ b/tensorflow_io/kafka/BUILD
@@ -6,7 +6,9 @@ cc_binary(
     name = "python/ops/_kafka_ops.so",
     srcs = [
         "kernels/kafka_dataset_ops.cc",
+        "kernels/kafka_sequence.cc",
         "ops/dataset_ops.cc",
+        "ops/kafka_ops.cc",
     ],
     copts = [
         "-pthread",
@@ -16,6 +18,7 @@ cc_binary(
     ],
     linkshared = 1,
     deps = [
+        "//tensorflow_io/core:sequence_ops",
         "@kafka",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
