--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -5,6 +5,7 @@ package(default_visibility = ["//visibility:public"])
 cc_binary(
     name = "python/ops/_text_ops.so",
     srcs = [
+        "kernels/text_input.cc",
         "kernels/text_sequence.cc",
         "ops/text_ops.cc",
     ],
@@ -18,7 +19,9 @@ cc_binary(
     ],
     linkshared = 1,
     deps = [
+        "//tensorflow_io/core:dataset_ops",
         "//tensorflow_io/core:sequence_ops",
+        "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
