--- a/tensorflow_io/lmdb/BUILD
+++ b/tensorflow_io/lmdb/BUILD
@@ -5,8 +5,8 @@ package(default_visibility = ["//visibility:public"])
 cc_binary(
     name = "python/ops/_lmdb_ops.so",
     srcs = [
-        "kernels/lmdb_dataset_ops.cc",
-        "ops/dataset_ops.cc",
+        "kernels/lmdb_input.cc",
+        "ops/lmdb_ops.cc",
     ],
     copts = [
         "-pthread",
@@ -15,6 +15,7 @@ cc_binary(
     ],
     linkshared = 1,
     deps = [
+        "//tensorflow_io/core:dataset_ops",
         "@lmdb",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
