--- a/tensorflow_io/mnist/BUILD
+++ b/tensorflow_io/mnist/BUILD
@@ -2,8 +2,8 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
-cc_binary(
-    name = "python/ops/_mnist_ops.so",
+cc_library(
+    name = "mnist_ops",
     srcs = [
         "kernels/mnist_dataset_ops.cc",
         "ops/dataset_ops.cc",
@@ -13,11 +13,7 @@ cc_binary(
         "-std=c++11",
         "-DNDEBUG",
     ],
-    linkshared = 1,
     deps = [
         "//tensorflow_io/core:dataset_ops",
-        "@libarchive",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
     ],
 )
