--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -2,8 +2,8 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
-cc_binary(
-    name = "python/ops/_text_ops.so",
+cc_library(
+    name = "text_ops",
     srcs = [
         "kernels/text_input.cc",
         "kernels/text_sequence.cc",
@@ -17,12 +17,8 @@ cc_binary(
     includes = [
         ".",
     ],
-    linkshared = 1,
     deps = [
         "//tensorflow_io/core:dataset_ops",
         "//tensorflow_io/core:sequence_ops",
-        "@libarchive",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
     ],
 )
