Udpate ParquetDataset to use columns field.
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/parquet/BUILD
+++ b/tensorflow_io/parquet/BUILD
@@ -5,8 +5,8 @@ package(default_visibility = ["//visibility:public"])
 cc_binary(
     name = "python/ops/_parquet_ops.so",
     srcs = [
-        "kernels/parquet_dataset_ops.cc",
-        "ops/dataset_ops.cc",
+        "kernels/parquet_input.cc",
+        "ops/parquet_ops.cc",
     ],
     copts = [
         "-pthread",
@@ -15,6 +15,7 @@ cc_binary(
     ],
     linkshared = 1,
     deps = [
+        "//tensorflow_io/core:dataset_ops",
         "@arrow",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
