--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,8 @@ jobs:
       if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
-          STATUS=$(curl --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
+          sha256sum $entry
+          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
           if [[ "$STATUS" -ne 201 ]] ; then
             echo "Upload to Bintray: $STATUS"
             exit 1
@@ -96,7 +97,8 @@ jobs:
       if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
-          STATUS=$(curl --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
+          sha256sum $entry
+          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
           if [[ "$STATUS" -ne 201 ]] ; then
             echo "Upload to Bintray: $STATUS"
             exit 1
@@ -115,7 +117,8 @@ jobs:
       if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
-          STATUS=$(curl --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
+          shasum -a 256 $entry
+          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
           if [[ "$STATUS" -ne 201 ]] ; then
             echo "Upload to Bintray: $STATUS"
             exit 1
