--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ jobs:
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
           sha256sum $entry
-          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
+          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/${TRAVIS_BUILD_NUMBER}/$entry)
           if [[ "$STATUS" -ne 201 ]] ; then
             echo "Upload to Bintray: $STATUS"
             exit 1
@@ -98,7 +98,7 @@ jobs:
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
           sha256sum $entry
-          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
+          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/${TRAVIS_BUILD_NUMBER}/$entry)
           if [[ "$STATUS" -ne 201 ]] ; then
             echo "Upload to Bintray: $STATUS"
             exit 1
@@ -118,7 +118,7 @@ jobs:
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
           shasum -a 256 $entry
-          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/$entry)
+          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/${TRAVIS_BUILD_NUMBER}/$entry)
           if [[ "$STATUS" -ne 201 ]] ; then
             echo "Upload to Bintray: $STATUS"
             exit 1
