--- a/tensorflow_io/audio/BUILD
+++ b/tensorflow_io/audio/BUILD
@@ -2,8 +2,8 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
-cc_binary(
-    name = "python/ops/_audio_ops.so",
+cc_library(
+    name = "audio_ops",
     srcs = [
         "kernels/audio_input.cc",
         "ops/audio_ops.cc",
@@ -13,10 +13,8 @@ cc_binary(
         "-std=c++11",
         "-DNDEBUG",
     ],
-    linkshared = 1,
+    linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
     ],
 )
