--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   bash -x -e tests/test_kafka/kafka_test.sh start kafka
   bash -x -e tests/test_kinesis/kinesis_test.sh start kinesis
   bash -x -e tests/test_pubsub/pubsub_test.sh start pubsub
+  bash -x -e tests/test_prometheus/prometheus_test.sh start
 - sudo -H python -m pip install -q -U twine --ignore-installed six
 - twine --version
 - export TENSORFLOW_INSTALL="$(python setup.py --package-version)"
