Add FFmpeg support on Audio streams (#307)
* Move video ffmpeg code to core, so that it could be shared by audio

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add FFmpeg support on Audio streams

This PR adds FFmpeg support on Audio streams. It is not completely
finished yet as:
1. Only AV_SAMPLE_FMT_S16 format is supported
2. Additional optimization is needed as currently samples are not read through batchs (one at a time instead).

This PR is part of GitHub issue 49.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Change tensorflow_io.video to tensorflow_io.ffmpeg to capture both audio and video

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -44,16 +44,69 @@ cc_library(
     ],
 )
 
-cc_binary(
-    name = "python/ops/libtensorflowio.so",
+cc_library(
+    name = "ffmpeg_3.4",
     srcs = [
+        "kernels/ffmpeg_reader.cc",
+        "kernels/ffmpeg_reader.h",
     ],
     copts = [
         "-pthread",
         "-std=c++11",
         "-DNDEBUG",
     ],
-    includes = [
+    includes = ["."],
+    linkstatic = True,
+    deps = [
+        "//tensorflow_io/core:dataset_ops",
+        "@ffmpeg_3_4//:ffmpeg",
+    ],
+)
+
+cc_library(
+    name = "ffmpeg_2.8",
+    srcs = [
+        "kernels/ffmpeg_reader.cc",
+        "kernels/ffmpeg_reader.h",
+    ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
+    ],
+    includes = ["."],
+    linkstatic = True,
+    deps = [
+        "//tensorflow_io/core:dataset_ops",
+        "@ffmpeg_2_8//:ffmpeg",
+    ],
+)
+
+cc_library(
+    name = "libav_9.20",
+    srcs = [
+        "kernels/ffmpeg_reader.cc",
+        "kernels/ffmpeg_reader.h",
+    ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
+    ],
+    includes = ["."],
+    linkstatic = True,
+    deps = [
+        "//tensorflow_io/core:dataset_ops",
+        "@libav_9_20//:libav",
+    ],
+)
+
+cc_binary(
+    name = "python/ops/libtensorflowio.so",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
     ],
     linkshared = 1,
     deps = [
@@ -68,5 +121,44 @@ cc_binary(
         "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
+    ],
+)
+
+cc_binary(
+    name = "python/ops/libtensorflowio_ffmpeg_3.4.so",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
+    ],
+    linkshared = 1,
+    deps = [
+        "//tensorflow_io/ffmpeg:ffmpeg_3.4_ops",
+    ],
+)
+
+cc_binary(
+    name = "python/ops/libtensorflowio_ffmpeg_2.8.so",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
+    ],
+    linkshared = 1,
+    deps = [
+        "//tensorflow_io/ffmpeg:ffmpeg_2.8_ops",
+    ],
+)
+
+cc_binary(
+    name = "python/ops/libtensorflowio_libav_9.20.so",
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
+    ],
+    linkshared = 1,
+    deps = [
+        "//tensorflow_io/ffmpeg:libav_9.20_ops",
     ],
 )
