[LINKEDIN-AVRO] Add avro dataset implementation and fix avro c setup - Why?   * The old implementation was slow for filters and lacked support for n-d tensors   * The avro c library was setup but not used - What?   * We have a new imlementation for reading avro data, called avro dataset   * Main features: Performance optimizations, support for n-d dense and sparse tensors   * avro c is now part of the third_party folder and used during compile   * Enable the cc test by using the googletest framework   * Refactor existing tests of using only the googletest framework -- since TF may not     maker their internal test scaffolding publicly available in the future
RB=1714094
G=tensorflow-reviewers,tony-reviewers
A=ahsu

Fix sparse tensor dimensions
Why? This missmatch only shows in the iter implementation in the eager mode
What? We need to add another dimension to the sparse tensors for the batch

RB=1723446
G=tensorflow-reviewers,tony-reviewers
R=cgu,ahsu,zhzhang,khu
A=ahsu

Merge with open source upstream code
- Why? We would like to leverage avro c++ and the upstream open source code
- What?
* Adjusted packages and code organization
* Added upstream code and build setup (renamed to AvroDataset2 for now--pre-merge)
* Add test for existing avro dataset implementation

Prepare for merge
Why? Would like to keep all implementations around during merge
What?
- Rename previous avro c++ implementation (suffix 2), delete later
- Rename pervious avro c implementation (c suffix), delete later

Wire-up c++ implementation into avro dataset
- Added data file reader for generic datum without reader schema but that does not work for streams apperently

Removed case where we use schema from data file
- Why? This does not seem to work for the streams
- What?
  * Removed the default argument for reader_schema of empty string
  * Moved the reader_schema as 2nd argument for the make_avro_dataset methods

Bugfix for avro data input stream
Why? The avro c++ implementation requests large (arb

--- a/tensorflow_io/avro/BUILD
+++ b/tensorflow_io/avro/BUILD
@@ -5,8 +5,8 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "avro_ops",
     srcs = [
-        "ops/avro_record_dataset.cc",
-        "ops/parse_avro_record.cc",
+        "kernels/avro_dataset.cc",
+        "ops/avro_ops.cc",
     ],
     copts = [
         "-pthread",
@@ -18,15 +18,83 @@ cc_library(
     ],
     linkstatic = True,
     deps = [
+        ":avro_utils",
+    ],
+)
+
+# Note: I use gtest directly instead of tf test framework because it
+# is not imported into TF io and even if it where it may go away in
+# the future, since there is a comment in tensorflow/core/BUILD and
+# in there it says that //tensorflow/core:test will be removed from
+# the public API
+cc_test(
+    name = "prefix_tree_test",
+    srcs = ["utils/prefix_tree_test.cc"],
+    deps = [
+        ":avro_utils",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+# TODO(fraudies): Migrate tests to avro c++ implementation
+# cc_test(
+#     name = "avro_parser_test",
+#    srcs = ["utils/avro_parser_test.cc"],
+#     deps = [
+#         ":avro_utils",
+#         "@com_google_googletest//:gtest_main",
+#     ],
+# )
+
+# TODO(fraudies): For these tests we need to figure out how to get
+# the test dependencies from TF included
+# Tried to define tf_cc_test target which does that for the internal
+# build but w/out success
+#cc_test(
+#    name = "value_buffer_test",
+#    srcs = ["utils/value_buffer_test.cc"],
+#    deps = [
+#        ":avro_utils",
+#        "//tensorflow/core:testlib",
+#        "@com_google_googletest//:gtest_main",
+#    ],
+#)
+#cc_test(
+#    name = "avro_parser_tree_test",
+#    srcs = ["utils/avro_parser_tree_test.cc"],
+#    deps = [
+#        ":avro_utils",
+#        "//tensorflow/core:testlib",
+#        "@com_google_googletest//:gtest_main",
+#    ],
+#)
+
+cc_library(
+    name = "avro_utils_api",
+    hdrs = ["utils/prefix_tree.h",
+            "utils/value_buffer.h",
+            "utils/avro_parser.h",
+            "utils/avro_parser_tree.h",
+            "utils/parse_avro_attrs.h",
+            "utils/avro_file_stream_reader.h",
+            ],
+    deps = [
         "//tensorflow_io/core:dataset_ops",
-        ":avro_c",
         "@com_googlesource_code_re2//:re2",
     ],
 )
 
 cc_library(
-    name = "avro_c",
-    srcs = ["avro_c/lib/libavro.so"],
-    includes = ["avro_c/include/"],
-    visibility = ["//visibility:public"],
+    name = "avro_utils",
+    srcs = ["utils/prefix_tree.cc",
+            "utils/value_buffer.cc",
+            "utils/avro_parser.cc",
+            "utils/avro_parser_tree.cc",
+            "utils/parse_avro_attrs.cc",
+            "utils/avro_file_stream_reader.cc",
+            ],
+    deps = [
+        ":avro_utils_api",
+        "@avro",
+    ],
 )
