Improvements to ArrowStreamDataset (#321)
* Add option to use stream as Unix Domain Socket

* Support mulitple hosts with ArrowStreamDataset

* Add ability to create ArrowStreamDataset from Pandas DataFrame slices

* Change ArrowStreamDataset API to use endpoint strings

--- a/tensorflow_io/arrow/BUILD
+++ b/tensorflow_io/arrow/BUILD
@@ -8,6 +8,8 @@ cc_binary(
         "kernels/arrow_dataset_ops.cc",
         "kernels/arrow_stream_client.h",
         "kernels/arrow_stream_client_unix.cc",
+        "kernels/arrow_util.cc",
+        "kernels/arrow_util.h",
         "ops/dataset_ops.cc",
     ],
     copts = [
