--- a/tensorflow_io/pubsub/BUILD
+++ b/tensorflow_io/pubsub/BUILD
@@ -18,7 +18,7 @@ cc_binary(
     linkshared = 1,
     deps = [
         "@com_github_grpc_grpc//:grpc++",
-        "@com_google_googleapis//google/pubsub/v1:pubsub_proto",
+        "@com_google_googleapis//google/pubsub/v1:pubsub_cc_grpc",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
