Azure file system library interface (#309)
* Azure file system library interface

- Use scheme az://
- c++ tests
- python tests

* fix uuid on linux and some linting

* fixes for linux build

* dont link third part uuid on macOS

* remove CXX11_ABI define as it's detected by configure script

* fix linting issues

* workspace linting fixes

* passing initial tests

* patch for third part repo fix

* linting fixes

* azure tests in test folder

* updating azure storage dependency to latest

* using azurite npm package as storage emulator

* fix for script parameter number

* nvm to specify node version

* Testing azure with bazel test

* nvm v8 for azurite

* azure py test

* bazel test cleanup

* fixing compiler warnings

* export environment variable indicating tests should use emulator

* using non-preview version of azurite and printing errno code when unknown

* logging to diagnose failing tests

* setting environment variable from travis config

* export tf azure use dev storage in test script

* skip linux tests for now

* including kokorun change

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 dist: xenial
-language: minimal
+language: generic
 
 git:
   quiet: true
 
 services:
 - docker
+
+before_install:
+- nvm install 8
 
 install:
 - curl https://bootstrap.pypa.io/get-pip.py | sudo -H python
@@ -20,6 +23,7 @@ install:
     bash -x -e tests/test_kinesis/kinesis_test.sh start kinesis
     bash -x -e tests/test_pubsub/pubsub_test.sh start pubsub
     bash -x -e tests/test_prometheus/prometheus_test.sh start
+    bash -x -e tests/test_azure/start_azure.sh
   fi
 - sudo -H python -m pip install -q -U twine --ignore-installed six
 - twine --version
