--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -112,6 +112,7 @@ cc_binary(
     deps = [
         "//tensorflow_io/audio:audio_ops",
         "//tensorflow_io/avro:avro_ops",
+        "//tensorflow_io/azure:azfs_ops",
         "//tensorflow_io/cifar:cifar_ops",
         "//tensorflow_io/hdf5:hdf5_ops",
         "//tensorflow_io/ignite:ignite_ops",
